tests/snapshots/ui_server_page_render__server_page_with_selected_test_button_uses_highlight_style.snap
---
source: tests/ui_server_page_render.rs
expression: frame
---
 F1 Library   F2 Queue   F3 Quick Play   F4 Playlists   F5 Server   F6 Settings 
                                                              ⏮︎   ⏵︎   ⏸︎   ⏹︎   ⏭︎ 
┌ Server Connection ───────────────────────────────────────────────────────────┐
│                                                                              │
│Server URL                                                                    │
│┌──────────────────────────────────────────────────────────┐                  │
││                                                          │                  │
│└──────────────────────────────────────────────────────────┘                  │
│Username                                                                      │
│┌──────────────────────────────────────────────────────────┐                  │
││                                                          │                  │
│└──────────────────────────────────────────────────────────┘                  │
│Password                                                                      │
│┌──────────────────────────────────────────────────────────┐                  │
││                                                          │                  │
│└──────────────────────────────────────────────────────────┘                  │
│                                                                              │
│[ Test Connection ]                                                           │
│[ Save ]                                                                      │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Now Playing ─────────────────────────────────────────────────────────────────┐
│                               No track playing                               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
q:Quit │ p/Space:Pause │ h:Prev │ l:Next │ r:Repeat (off) │ y:Lyrics            
Shift+T:Shuffle library │ n:Star playing                                        
Tab:Next field │ Enter:Test/Save │ Ctrl+r:Refresh
